<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Shining-cat - Shiva Bernhard
  ~ This file is part of Everyday.
  ~
  ~     Everyday is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     Everyday is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Everyday.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="title_about">À propos</string>
    <string name="title_home">Accueil</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_sessions_calendar">Calendrier</string>
    <string name="title_sessions_list">Liste</string>
    <string name="title_statistics">Statistiques</string>
    <string name="title_rewards">Récompenses</string>
    <string name="title_rewards_grid">Grille</string>
    <string name="title_rewards_list">Liste</string>

    <!-- INFOS SCREEN -->
    <string name="app_made_by" translatable="true">Création et réalisation :</string>
    <string name="app_made_name" translatable="false">Shiva Bernhard</string>
    <string name="contact" translatable="false">shiva.bernhard@shining-cat.fr</string>
    <string name="website" translatable="false">www.shining-cat.fr</string>
    <string name="shining_cat_logo_content_description" translatable="false">Shining-cat logo</string>
    <string name="info_text_string"><![CDATA[Lorem ipsum dolor sit amet. Morbi hendrerit tellus massa, vel dignissim elit ullamcorper sed. In posuere dapibus ex sit amet tempus. Vestibulum mattis, mi et lacinia tristique, mi diam varius magna, eget porta ex metus a risus. Nam rutrum neque orci, eget congue ipsum tincidunt non. Quisque pulvinar sed velit eu cursus. Vestibulum nec porta elit. In eget diam magna. Integer in eros interdum, ornare mi quis, sagittis diam. Aliquam ullamcorper quam a gravida lacinia. Maecenas a mattis metus. Nunc faucibus auctor tellus sed accumsan. Fusce posuere odio eget nibh iaculis vehicula. In hac habitasse platea dictumst. Donec dictum viverra diam sit amet tincidunt. Etiam pellentesque blandit massa, ut hendrerit purus accumsan eget. Cras viverra, nunc non semper ullamcorper, nisl ante sodales ante, at venenatis justo tellus a ipsum. Vestibulum aliquet accumsan pretium. Sed rhoncus a orci sit amet porta.]]></string>
    <!--TODO: écrire texte "about"-->


    <!--CONTENTS DESCRIPTIONS-->
    <string name="content_description_add_new_preset">Bouton ajouter un nouveau préréglage</string>
    <string name="content_description_kiwi_logo">kiwi logo</string>

    <!--SESSION PRESETS    -->
    <string name="session_preset_creation_dialog_title">Création</string>
    <string name="session_preset_edition_dialog_title">Édition du preset</string>
    <string name="session_preset_audio_edit_dialog_title">Édition des sessions Audio</string>
    <string name="duration">Durée</string>
    <string name="countdown">Compte à rebours</string>
    <string name="start_end_sound">Son de début et fin</string>
    <string name="interval">Intervalle</string>
    <string name="interval_random">Intervalle irrégulier aléatoire</string>
    <string name="interval_random_short">irrégulier aléatoire</string>
    <string name="interval_random_explanation">Désactiver Intervalle irrégulier pour choisir un intervalle fixe</string>
    <string name="vibration">Vibration</string>
    <string name="interval_sound">Son d\'intervalle</string>
    <string name="audio_guide">Support Audio</string>
    <string name="no_session_preset_found">Aucun preset trouvé, créez-en un nouveau!</string>
    <string name="session_duration_vs_audio_explanation">pour une session audio, la durée sera celle du fichier choisi.</string>
    <string name="session_interval_vs_audio_explanation">pour une session audio, il n\y aura pas d\'intervalles intermédiaires</string>
    <string name="session_countdown_explanation">longueur du compte à rebours avant le démarrage</string>
    <string name="session_interval_explanation">Intervalle auquel un son sera joué, choisir 0 pour aucun</string>
    <string name="audio_session_preset_title">Démarrer une session audio:</string>
    <string name="audio_free_session_preset_title">Choisir un accompagnement audio pour une session libre…</string>
    <string name="timed_session_preset_title">Démarrer une session minutée</string>
    <string name="timed_free_session_preset_title">Démarrer une session chronométrée</string>
    <string name="unknown_audio_duration_fill_manually">durée inconnue, renseigner manuellement la durée du fichier audio sélectionné</string>
    <string name="audio_file_display_info">%1$s - %2$s - %3$s</string>
    <string name="session_preset_invalid_preset">Le preset est invalide, corriger les champs indiqués</string>
    <string name="free_timed_session">Session chronométrée libre</string>
    <string name="timed_session">Session minutée</string>
    <string name="audio_session">Session audio fixe</string>
    <string name="free_audio_session">Session audio libre</string>
    <string name="session_preset_audio_free_explanation">Avec ce preset, sélectionnez un fichier audio d\'accompagnement à chaque lancement</string>
    <string name="session_preset_timed_free_explanation">Avec ce preset, chronométrez une session sans durée prédéfinie</string>


</resources>