<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="fr.shining_cat.everyday.screens.views.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_sessions"
        android:name="fr.shining_cat.everyday.screens.views.sessions.SessionsFragment"
        android:label="@string/title_sessions"
        tools:layout="@layout/sessions_fragment" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="fr.shining_cat.everyday.screens.views.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/statistics_fragment" />

    <fragment
        android:id="@+id/navigation_rewards"
        android:name="fr.shining_cat.everyday.screens.views.rewards.RewardsFragment"
        android:label="@string/title_rewards"
        tools:layout="@layout/rewards_fragment" />

</navigation>