<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021. Shining-cat - Shiva Bernhard
  ~ This file is part of Everyday.
  ~
  ~     Everyday is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     Everyday is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Everyday.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/bottombar_button_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_sessions"
        android:icon="@drawable/bottombar_button_list"
        android:title="@string/title_sessions" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/bottombar_button_stats"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/bottombar_button_trophy"
        android:title="@string/title_rewards" />

</menu>
