<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Shining-cat - Shiva Bernhard
  ~ This file is part of Everyday.
  ~
  ~     Everyday is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     Everyday is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Everyday.  If not, see <https://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="fr.shining_cat.everyday.screens.views.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_session_preset_dialog_audio"
            app:destination="@id/navigation_session_preset_dialog_audio" />
        <action
            android:id="@+id/action_navigation_home_to_session_preset_dialog_audio_free"
            app:destination="@id/navigation_session_preset_dialog_audio_free" />
        <action
            android:id="@+id/action_navigation_home_to_session_preset_dialog_timed"
            app:destination="@id/navigation_session_preset_dialog_timed" />
        <action
            android:id="@+id/action_navigation_home_to_session_preset_dialog_timed_free"
            app:destination="@id/navigation_session_preset_dialog_timed_free" />
    </fragment>

    <dialog
        android:id="@+id/navigation_session_preset_dialog_audio"
        android:name="fr.shining_cat.everyday.screens.views.home.sessionpresetdialogs.AudioSessionPresetDialog"
        tools:layout="@layout/dialog_session_preset_audio" >
        <argument
            android:name="preset"
            app:argType="fr.shining_cat.everyday.models.SessionPreset.AudioSessionPreset"
            app:nullable="true"
            android:defaultValue="@null"/>
    </dialog>

    <dialog
        android:id="@+id/navigation_session_preset_dialog_audio_free"
        android:name="fr.shining_cat.everyday.screens.views.home.sessionpresetdialogs.AudioSessionPresetDialog"
        tools:layout="@layout/dialog_session_preset_audio_free" >
        <argument
            android:name="preset"
            app:argType="fr.shining_cat.everyday.models.SessionPreset.AudioFreeSessionPreset"
            app:nullable="true"
            android:defaultValue="@null"/>
    </dialog>

    <dialog
        android:id="@+id/navigation_session_preset_dialog_timed"
        android:name="fr.shining_cat.everyday.screens.views.home.sessionpresetdialogs.AudioSessionPresetDialog"
        tools:layout="@layout/dialog_session_preset_timed" >
        <argument
            android:name="preset"
            app:argType="fr.shining_cat.everyday.models.SessionPreset.TimedSessionPreset"
            app:nullable="true"
            android:defaultValue="@null"/>
    </dialog>

    <dialog
        android:id="@+id/navigation_session_preset_dialog_timed_free"
        android:name="fr.shining_cat.everyday.screens.views.home.sessionpresetdialogs.AudioSessionPresetDialog"
        tools:layout="@layout/dialog_session_preset_timed_free" >
        <argument
            android:name="preset"
            app:argType="fr.shining_cat.everyday.models.SessionPreset.TimedFreeSessionPreset"
            app:nullable="true"
            android:defaultValue="@null"/>
    </dialog>

    <fragment
        android:id="@+id/navigation_sessions"
        android:name="fr.shining_cat.everyday.screens.views.sessions.SessionsFragment"
        android:label="@string/title_sessions"
        tools:layout="@layout/fragment_sessions" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="fr.shining_cat.everyday.screens.views.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_rewards"
        android:name="fr.shining_cat.everyday.screens.views.rewards.RewardsFragment"
        android:label="@string/title_rewards"
        tools:layout="@layout/fragment_rewards" />

</navigation>